// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute price endpoint rest should return success 1`] = `
Object {
  "data": Object {
    "result": 1.15591,
  },
  "result": 1.15591,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
  },
}
`;

exports[`execute price endpoint websocket should return success 1`] = `
Object {
  "data": Object {
    "result": 1.28778,
  },
  "result": 1.28778,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceivedUnixMs": 1668165071111,
    "providerDataStreamEstablishedUnixMs": 1668165071111,
    "providerIndicatedTimeUnixMs": 1659472542655,
  },
}
`;
